--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "expert-exam": {
+    "angular-quiz": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/expert-exam",
+            "outputPath": "dist/angular-quiz",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -71,21 +71,21 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "expert-exam:build"
+            "browserTarget": "angular-quiz:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "expert-exam:build:production"
+              "browserTarget": "angular-quiz:build:production"
             },
             "stage": {
-              "browserTarget": "expert-exam:build:stage"
+              "browserTarget": "angular-quiz:build:stage"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "expert-exam:build"
+            "browserTarget": "angular-quiz:build"
           }
         },
         "test": {
@@ -123,16 +123,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "expert-exam:serve"
+            "devServerTarget": "angular-quiz:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "expert-exam:serve:production"
+              "devServerTarget": "angular-quiz:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "expert-exam"
+  "defaultProject": "angular-quiz"
 }
