--- a/quiz-backend/build.gradle
+++ b/quiz-backend/build.gradle
@@ -13,6 +13,14 @@ repositories {
 	mavenCentral()
 }
 
+
+def webappDir = "$projectDir/../dist/angular-quiz"
+processResources {
+	from (webappDir) {
+		into 'public'
+	}
+}
+
 dependencies {
   compile("io.springfox:springfox-swagger2:2.9.2")
   compile("io.springfox:springfox-swagger-ui:2.9.2")
